next
----
-tag_data: updated to make use of vappio add-config-metadata-to-tag metric
-core_qiime component uses a new flag (-f) which overwrites it's working directory
-added key=value feature to tag_data.pl
-dataprep_dual16S.pl: now has >2400 artificial barcodes for clovr16S analysis
-$;R_EXEC$; - a variable that holds path to R program is added to software.config and to pangenome_make_graphs component
-uclust_replicate_removal: new component and program for removing artificial pyrosequencing replicates from uclust output. component is called: uclust_remove_replicates
-metagenemark: new component
-clovrdownload: Commented out moving downloaded output from /mnt/data to user specified out directory. This is done as the tags are not being updated.
-clovr_16S_rdptables: new CloVR related component, was part of rdp_classifier, but made external for non-clovr users
-software.config: added MUGSY_EXEC variable that holds mugsy installation
-mugsycog: modified mugsycog.xml so that MUGSY_EXEC variable holds the mugsy path. Also, added --map_file param needed for mapfeatures.pl
-pfunc modules. Now assigns annotation sets and keeps uniref100 id instead of uniprot member ids for annotation source information regarding BER parsing
-rdp_classifer: removed script associated with CloVR, will make it a separate component.
-mugsyalign: Added FASTA_FILE_DIR key in <param> section as this value is critical for mugsy to write output to.
-blast2bsml: Deprecated blast2bsml.pl becuase it wasn't being used by any components. Still in SVN (deprecated_blast2bsml.pl)
-wu-blast2bsml/wu-blast2btab: renamed to blast2bsml.pl and blast2btab.pl. Was being used by both ncbi and wu versions of blast.
-blast_components: change wu-blast2btab/bsml -> blast2btab/bsml where applicable
-blast_components: added new var to configs which was missing ($;FILTER_HSPS_FOR_STATS$;)
-blast_components: added new var to configs COMPRESS_BSML_OUTPUT and EXPECT (where needed).
-create_map_file: new component
