@@ -1,0 +1,51 @@
+[interface]
+classification = file / conversion
+
+[parameters]
+;; The UID of the library these reads belong to
+$;LIBRARY$; =
+;; Type of fastq (options are 'sanger', 'solexa' or 'illumina')
+$;FASTQ_TYPE$; = illumina
+;; Mates are on average i +- d basepairs apart (Must provide integers for i and d here)
+$;INSERT_SIZE$; = 
+;; Paired end orientation.
+;; If 5'-3' <-> 3'-5' parameter should be set to 'innie' (Usually for paired-end reads)
+;; If 3'-5' <-> 5'-3' parameter should be set to 'outtie' (Usually for mate-pair reads)
+$;ORIENTATION$; = innie
+
+[input]
+$;INPUT_FILE_LIST$; = 
+$;INPUT_FILE$; = 
+
+[output]
+$;OUTPUT_TOKEN$; = default
+$;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;FRG_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.frg.list
+
+[component]
+$;COMPONENT_NAME$; = fastq_to_CA
+$;DESCRIPTION$; = none
+$;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;PIPELINE_TOKEN$; = unnamed
+
+;The version,revision,tag here is set by an interpolated CVS tag
+$;VERSION$; = $Name$
+$;RELEASE_TAG$; = $Name$
+$;REVISION$; = $Revision: 5801 $
+
+$;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
+$;ITERATOR1$; = i1
+$;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
+
+;Distributed options
+$;GROUP_COUNT$; = 150
+$;NODISTRIB$; = 0
+
+;the following keys are replaced at runtime by the invocation script
+$;COMPONENT_CONFIG$; =
+$;COMPONENT_XML$; =
+$;PIPELINE_XML$; =
+$;PIPELINEID$; =
+
+[include]
+$;PROJECT_CONFIG$;=
