@@ -1,0 +1,87 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<commandSetRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation='commandSet.xsd'>
+    <commandSet type="serial">
+        <state>incomplete</state>
+        <name>fastq_to_CA workflow</name>
+        <!--Preprocessing-->
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create output directory</name>
+            <state>incomplete</state>
+            <executable>mkdir</executable>
+            <arg>-p -m 777 $;OUTPUT_DIRECTORY$;</arg>
+        </command>
+        <command>               
+            <type>RunUnixCommand</type>
+            <name>create temp directory</name>
+            <state>incomplete</state>
+            <executable>mkdir</executable>
+            <arg>-p -m 777 $;TMP_DIR$;</arg>
+        </command>
+        <command>
+            <type>RunUnixCommand</type>
+            <name>fastqToCA</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/fastq_to_CA</executable>
+			<param>
+				<key>stdout</key>
+				<value>$;OUTPUT_DIRECTORY$;/fastqToCA.stdout</value>
+			</param>
+			<param>
+				<key>stderr</key>
+				<value>$;OUTPUT_DIRECTORY$;/fastqToCA.stderr</value>
+			</param>
+            <param>
+                <key>--fastq_to_CA_exe</key>
+                <value>$;FASTQTOCA_EXEC$;</value>
+            </param>                
+            <param>
+                <key>--fastq_file</key>
+                <value>$;INPUT_FILE$;</value>
+            </param>
+            <param>
+                <key>--fastq_file_list</key>
+                <value>$;INPUT_FILE_LIST$;</value>
+            </param>
+            <param>
+                <key>--insert_size</key>
+                <value>&quot;$;INSERT_SIZE$;&quot;</value>
+            </param>			                                
+            <param>
+                <key>--library</key>
+                <value>$;LIBRARY$;</value>
+            </param>
+            <param>
+                <key>--type</key>
+                <value>$;FASTQ_TYPE$;</value>
+            </param>
+            <param>
+                <key>--reads_orientation</key>
+                <value>$;ORIENTATION$;</value>
+            </param>
+            <param>
+                <key>--output</key>
+                <value>$;OUTPUT_DIRECTORY$;/$;LIBRARY$;.frg</value>
+            </param>                
+        </command>
+		<!--Post-processing-->
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create fragment list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>              
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.frg"</value>                
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;FRG_OUTPUT_LIST$;</value>
+            </param>
+        </command>                        
+    </commandSet>
+</commandSetRoot>    
